--- a/client/assets/scss/_variables.scss
+++ b/client/assets/scss/_variables.scss
@@ -11,6 +11,8 @@ $icon-font-path: "../../../node_modules/bootstrap-sass/assets/fonts/bootstrap/";
 // //
 // //## Gray and brand colors for use across Bootstrap.
 
+$white:                    #fff;
+
 // $gray-base:              #000 !default;
 // $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
 // $gray-dark:              lighten($gray-base, 20%) !default;   // #333
