raw components, get data from api

--- a/client/source/components/suppliers/suppliers.component.html
+++ b/client/source/components/suppliers/suppliers.component.html
@@ -1,1 +1,18 @@
-<h1> Suppliers </h1>
+<div class="app-container">
+    <div class="text-center">
+        <h1> Where your money goes </h1>
+        <h4> Payments made by Chichester District Council to individual suppliers with a value over £500 made within October </h4>
+        <hr>
+    </div>
+    <suppliers-filter-form 
+            filters-data="$ctrl.filters" 
+            on-filter-change="$ctrl.refreshSupplierData($event)"
+            on-filter-reset="$ctrl.resetFilters($event)">
+    </suppliers-filter-form>
+    <suppliers-list-container payments-data="$ctrl.suppliersData.payments"></suppliers-list-container>
+    <suppliers-pagination 
+            filters-data="$ctrl.filters" 
+            on-filter-change="$ctrl.refreshSupplierData($event)" 
+            pagination-data="$ctrl.suppliersData.pagination">
+    </suppliers-pagination>
+</div>
