--- a/client/source/components/suppliers/suppliers-list-container/suppliers-list-container.component.html
+++ b/client/source/components/suppliers/suppliers-list-container/suppliers-list-container.component.html
@@ -19,3 +19,7 @@
         <suppliers-list-item ng-repeat="supplier in $ctrl.payments" supplier-data="supplier"></suppliers-list-item>    
     </div>
 </div>
+
+<div class="suppliers-list-container">
+    <p> No results </p>    
+</div>
