--- a/client/source/components/suppliers/suppliers-pagination/suppliers-pagination.component.html
+++ b/client/source/components/suppliers/suppliers-pagination/suppliers-pagination.component.html
@@ -1,4 +1,9 @@
-
-Current {{$ctrl.pagination.current}}, From {{$ctrl.pagination.from}}, to {{$ctrl.pagination.to}} 
-
-<button ng-click="$ctrl.onChangePage(5)">CLICK TEST PAGE 9</button>
+<ul ng-if="$ctrl.pagination" uib-pagination 
+        total-items="$ctrl.pagination.total * $ctrl.CONFIG.suppliersItemsPerPage" 
+        previous-text="<"
+        next-text=">"
+        items-per-page="{{$ctrl.CONFIG.suppliersItemsPerPage}}"
+        max-size="$ctrl.CONFIG.limitOfPaginationSize"
+        ng-model="$ctrl.activePage" 
+        ng-change="$ctrl.onChangePage()">
+</ul>
