--- a/client/source/components/suppliers/suppliers.component.html
+++ b/client/source/components/suppliers/suppliers.component.html
@@ -5,7 +5,7 @@
         <hr>
     </div>
     <suppliers-filter-form 
-            filters-data="$ctrl.filters" 
+            filters-data="$ctrl.originFilters" 
             on-filter-change="$ctrl.refreshSupplierData($event)"
             on-filter-reset="$ctrl.resetFilters($event)">
     </suppliers-filter-form>
