some base styles

--- a/client/assets/scss/_layout.scss
+++ b/client/assets/scss/_layout.scss
@@ -1,3 +1,19 @@
+body {
+    background-image: url('../images/background.png');
+}
+
 .app-container {
-    background-color: $white;
+    padding: 10px;
+
+    @media screen and (min-width: $screen-xs) {
+        padding: 20px;
+    }
+
+    @media screen and (min-width: $screen-sm) {
+        padding: 30px;
+    }
+
+    @media screen and (min-width: $screen-md) {
+        padding: 40px;
+    }
 }
