--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -1,4 +1,10 @@
 @import '_variables';
 @import "bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 
+@import '_utils';
 @import '_layout';
+
+@import 'common/button/button';
+@import 'common/pound-rating/pound-rating';
+
+@import 'components/suppliers/suppliers.component.scss';
