--- a/client/source/components/suppliers/suppliers-list-container/suppliers-list-container.component.html
+++ b/client/source/components/suppliers/suppliers-list-container/suppliers-list-container.component.html
@@ -4,13 +4,13 @@
             <div class="col-sm-6">
                 Supplier
             </div>  
-            <div class="col-sm-2">
+            <div class="col-sm-2 text-center">
                 Pound Rating
             </div>  
-            <div class="col-sm-2">
+            <div class="col-sm-2 text-center">
                 Reference
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-2 text-center">
                 Value
             </div>
         </div> 
