csses and templates

--- a/client/assets/scss/_variables.scss
+++ b/client/assets/scss/_variables.scss
@@ -14,10 +14,10 @@ $icon-font-path: "../../../node_modules/bootstrap-sass/assets/fonts/bootstrap/";
 $white:                     #fdfdfd;
 $blue:                      #2288b7;
 
-$light-gray:                #d2d1d1;             
+$light-gray:                #ebeced;             
 $lighter-gray:              #d5d4d4;
-$dark-gray:                 #959595;
-$darker-gray:               #646464;
+$dark-gray:                 #969696;
+$darker-gray:               #676767;
 
 // $gray-base:              #000 !default;
 // $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
