--- a/client/assets/scss/components/suppliers/suppliers.component.scss
+++ b/client/assets/scss/components/suppliers/suppliers.component.scss
@@ -1,4 +1,5 @@
 @import '_suppliers-filter-form.component';
+@import '_suppliers-modal-details.component';
 @import '_suppliers-list-container.component';
 @import '_suppliers-pagination.component';
 
