--- a/client/source/components/suppliers/suppliers.component.html
+++ b/client/source/components/suppliers/suppliers.component.html
@@ -16,5 +16,6 @@
                 on-filter-change="$ctrl.refreshSupplierData($event)" 
                 pagination-data="$ctrl.suppliersData.pagination">
         </suppliers-pagination>
+        <rating></rating>
     </div>
 </div>
