--- a/client/assets/scss/_utils.scss
+++ b/client/assets/scss/_utils.scss
@@ -15,3 +15,19 @@ hr {
 [ng-click] {
     cursor: pointer; 
 }
+
+.left {
+    float: left;
+}
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+
+@media screen and (min-width: $screen-sm) {
+    .text-center-sm-up {
+        text-align: center;
+    }
+}
