--- a/client/source/components/suppliers/suppliers-list-container/suppliers-list-container.component.html
+++ b/client/source/components/suppliers/suppliers-list-container/suppliers-list-container.component.html
@@ -1,25 +1,25 @@
-<div class="suppliers-list-container" ng-if="$ctrl.payments.length">
-    <div class="head">
-        <div class="row">
-            <div class="col-sm-6">
+<div class="row suppliers-list-container" ng-if="$ctrl.payments.length">
+    <div class="col-xs-12">
+        <div class="row head hidden-xs">        
+            <div class="col col-sm-4 col-md-5 col-lg-6">
                 Supplier
             </div>  
-            <div class="col-sm-2 text-center">
+            <div class="col col-sm-4 col-md-3 col-lg-2 text-center">
                 Pound Rating
             </div>  
-            <div class="col-sm-2 text-center">
+            <div class="col col-sm-2 text-center">
                 Reference
             </div>
-            <div class="col-sm-2 text-center">
+            <div class="col col-sm-2 text-center">
                 Value
             </div>
-        </div> 
+        </div>
     </div>
-    <div class="body">
-        <suppliers-list-item ng-repeat="supplier in $ctrl.payments" supplier-data="supplier"></suppliers-list-item>    
+    <div class="col-xs-12 body">
+        <suppliers-list-item ng-repeat="supplier in $ctrl.payments" supplier-data="supplier"></suppliers-list-item>
     </div>
 </div>
 
-<div class="suppliers-list-container" ng-if="!$ctrl.payments.length">
-    <p> No results </p>    
+<div ng-if="!$ctrl.payments.length">
+    <h4> No results </h4>         
 </div>
